Refactored Android build target and added integration test.
Changes:
- Fixed android test project.
- Added integration test to verify presence of android sdk component jar.
- Moved android sdk component and R file from classpath to module dependency of a build target.